--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,8 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 100%;
+  padding: 5px 0px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -116,6 +117,7 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  padding: 5px 0px;
 }
 .filter-options select {
   background-color: white;
@@ -131,6 +133,9 @@ nav h1 a {
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
@@ -145,7 +150,8 @@ nav h1 a {
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: 75%;
+  max-width: 400px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
