--- a/css/styles.css
+++ b/css/styles.css
@@ -51,12 +51,13 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  height: 100%;
   background-color: #252831;
   text-align:center;
 }
 nav h1 {
   margin: auto;
+  padding: 1.25em;
 }
 nav h1 a {
   color: #fff;
@@ -151,12 +152,12 @@ nav h1 a {
   padding: 0 30px 25px;
   text-align: left;
   width: 75%;
-  max-width: 400px;
+  
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
-  margin: 0;
+  margin: 20px 0;
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
@@ -224,6 +225,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
+  margin: auto;
 	width: 90%;
 
 }
@@ -272,16 +274,14 @@ nav h1 a {
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 75%;
 }
-@media screen and (max-width: 400px) {
-  #reviews-container {
-    width: 40%;
-  }
-}
+
 #reviews-list li p {
   margin: 0 0 10px;
 }
 #restaurant-hours td {
   color: #666;
 }
+
+
