--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,9 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+img {
+  width: auto;
+}
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -67,6 +70,7 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
+    display: block;
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
@@ -211,7 +215,7 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
+  position: bottom;
   width: 50%;
 }
 #restaurant-name {
@@ -285,17 +289,53 @@ nav h1 a {
 }
 
 /* mobile */
-@media screen and (max-width: 370px) {
-  #restaurant-container, #reviews-container, #restaurant-content, #restaurant-list {
+@media screen and (max-width: 350px) {
+  .inside {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  #restaurant-container, #reviews-container, #restaurant-list {
+    display: flex;
+    width: 100%;
+    height: 200px;
+    align-items: center;
+    margin: auto;
+    overflow: hidden;
+  }  
+  #restaurant-name {
+    display: flex;
+  }
+  ul, img {
+    height: 200px;
+    width: 100%;
+    margin: auto;
+  }
+  #breadcrumb {
+    max-height: 100px;
+    width: 100%;
+  }
+  .inside nav {
+    order: 0;
+    z-index: 9999;
+  }
+  .filter-options {
+    display: flex;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width:750px) {
+  #restaurant-container, #reviews-container {
+    display: flex;
     width: 50%;
     padding: 140px 20px 30px 0;
     align-items: center;
+    margin: auto;
   }
-  #restaurant-img {
-    width: 100%;
-  }
-  #restaurant-hours, #restaurant-address {
-    padding-right: 40px;
-    max-width: 
+  img {
+    max-height: 300px;
+    min-width: 300px;
+    margin: auto;
   }
 }
